Update title and description

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->
 <!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->
 <head>
-    <title>Build a Virtual World!</title>
+    <title>Build WebExtensions Addons</title>
     <!-- Meta -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -45,8 +45,8 @@
         <div class="container">
             <img class="profile-image img-responsive pull-left" src="assets/images/profile.png" />
             <div class="profile-content pull-left">
-                <h1 class="name">Activity Title</h1>
-                <h2 class="desc">subtitle</h2>
+                <h1 class="name">Build WebExtensions Addons</h1>
+                <h2 class="desc">First meeting - Introduction to Browser Extensions</h2>
             </div><!--//profile-->
         </div><!--//container-->
     </header><!--//header-->
