First activity version

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->
 <!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->
 <head>
-    <title>Build WebExtensions Addons</title>
+    <title>Build your first Browser Addon</title>
     <!-- Meta -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -45,7 +45,7 @@
         <div class="container">
             <img class="profile-image img-responsive pull-left" src="assets/images/profile.png" />
             <div class="profile-content pull-left">
-                <h1 class="name">Build WebExtensions Addons</h1>
+                <h1 class="name">Build your first Browser Addon</h1>
                 <h2 class="desc">First meeting - Introduction to Browser Extensions</h2>
             </div><!--//profile-->
         </div><!--//container-->
@@ -58,15 +58,20 @@
                     <div class="section-inner">
                         <h2 class="heading">Introduction</h2>
                         <div class="content">
-                          <p>Information about the activity</p>
-                          <p><b>Your Mission: learn the basics of A-Frame so that your Club can create a virtual version of your University.</b> Are you ready?</p>
-                        </div><!--//content-->
+                          <p>A browser extension is a plug-in that extends the functionality of a web
+browser. Some extensions are authored using web technologies such as HTML,
+JavaScript, and CSS. Others are developed using machine code and application
+programming interfaces (APIs) provided by web browsers, such as NPAPI and PPAPI.
+Browser extensions can change the user interface of the web browser without
+directly affecting viewable content of a web page; for example, by adding a
+browser toolbar.</p>
+                          <p>In this activity you will learn all about WebExtensions and Addon's and why to build an extension for your browser. This activity will also prepare you for your next meeting in which you will start diving more into <b>Building your First browser Addon</b>.</p> </div><!--//content-->
                     </div><!--//section-inner-->
                 </section><!--//section-->
 
                <section class="latest section">
                     <div class="section-inner">
-                        <h2 class="heading">Introduce the technology</h2>
+                        <h2 class="heading">Get Started - 10'</h2>
                         <div class="content">
 
                             <div class="item featured text-center">
@@ -79,12 +84,12 @@
                                     </div>
 
                                 <div class="desc text-left">
-                                    <p>Introduction the technology or the project students will be contributing to</p>
+                                    <h4 class="title">Are you ready to introduce browser extensions to your Club?</h4></p>
                                     <br>
-                                    <h4 class="title">Share a slide presentation<span class="place"></h4>
-                                    <p>Use this slide deck as is, or customize it to make it your own. Going through this will teach you everything you need to lead this activity with your club.</p>
-
-                                    <a class="btn btn-cta-secondary" href="https://aframe.io/aframe-presentation-kit" target="_blank">Intro to A-Frame Deck</a>
+                                    <h4 class="title">Share a slide presentation</h4>
+                                    <p>Use the following slide deck as is, or customize it to make it your own. Going through this will teach you everything you need to lead this activity with your club.</p>
+                                    <p>After you customize the slidedeck use it during your Club's first meeting for introducing your members into browser extensions.</p>
+                                    <a class="btn btn-cta-secondary fork" href="https://docs.google.com/presentation/d/1C0YbS15YO_JbH8dY_4nhPZWTtJOPe2Fx8GRyZjPCAgs/edit#slide=id.p" target="_blank">Teach browser extensions</a>
 
                                 </div><!--//desc-->
                             </div><!--//item-->
@@ -95,25 +100,28 @@
 
                 <section class="projects section">
                     <div class="section-inner">
-                        <h2 class="heading">Get Started</h2>
+                        <h2 class="heading">Idea Generation - 35'</h2>
                         <div class="content">
                             <div class="item">
-
-                                <p class="summary">Now your Club is fired up and ready to go, we invite you to go through this A-frame getting started activity (it will take you less than an hour) either as individuals or together as a group and then and come back to start building your VR experience.</p>
-                            </div><!--//item-->
-                            <div class="item">
-                                <h4 class="title"><a href="https://docs.google.com/presentation/d/1qJwr_JwPtbcUx5E09eeJrpa2eXYN7ovmhsv4L27cjeo/present#slide=id.g2102afdc78_0_23">Activity's Slidedeck</a> <span class="label label-theme">Facilitator</span></h4>
-                                <p class="summary">As the activity's facilitator open and share this slidedeck so your Club can go through the activity together.</p>
-                                <p><a class="more-link" href="https://docs.google.com/presentation/d/1qJwr_JwPtbcUx5E09eeJrpa2eXYN7ovmhsv4L27cjeo/present#slide=id.g2102afdc78_0_23" target="_blank"><i class="fa fa-external-link"></i>Activity's Slidedeck</a></p>
-                            </div><!--//item-->
-                            <div class="item">
-                                <h3 class="title">Fork our Repo <span class="label label-theme">Students</span></h3>
-                                <p class="summary">For going through the activity, students have to fork our GitHub repository and start working on the examples one by one. <b>This requires you to be familiar with the tool Git and the GitHub ecosystem.</b> In the Campus Clubs <a href="https://campus.mozilla.community/activities/#learn">learning activities</a> you can find two activities for mastering Git and learning how to contribute to Open Source on GitHub.</p>
-
+                                <p class="summary">Now your Club is fired up and ready to go, we invite you to start brain storming on ideas for building your first Addon either as individuals or together as a group.</p>
+                                <p>Preferbly break into small groups (less than 4 people) and:</p>
+                                <ul>
+                                  <li>Search <a href="addons.mozilla.org">addons.mozilla.org</a> and test extensions</li>
+                                  <li>What do you like/not like about them?</li>
+                                </ul>
+                                <p>Now that you have a better idea of the avaliable Addons work as a group for answering the following question:</p>
                                 <br>
-                                <!-- Place this tag where you want the button to render. -->
-                                <a class="btn btn-cta-secondary fork" href="https://github.com/mozillacampusclubs/Build-a-Virtual-World---examples/fork" data-icon="octicon-repo-forked" data-style="mega" data-count-href="/mozillacampusclubs/Build-a-Virtual-World---examples/network" data-count-api="/repos/mozillacampusclubs/Build-a-Virtual-World---examples#forks_count" data-count-aria-label="# forks on GitHub" aria-label="Fork mozillacampusclubs/Build-a-Virtual-World---examples on GitHub">Fork</a>
-                                <p>Now that you forked the repo, download it in your computer and open the example one by one, following the instructions in them and on the presenter.</p>
+                                <h4><b>What would you like to solve for by building an Addon?</b></h4>
+                                <p>Additional questions:</p>
+                                <ol>
+                                  <li>What is the problem you want to solve?</li>
+                                  <li>Who is your audience?</li>
+                                  <li>What is the impact your Addon will bring into your audience's life?</li>
+                                </ol>
+                                <br>
+                                <p>Useful tips on Idea generation from the <a href="https://toolkit.mozilla.org/method/idea-generation/">Open Innovation Toolkit:</a></p>
+                                <p><b>Part 1:</b> Aim to spend about ⅓ of the allotted time on divergent thinking. This is the rapid creation of random, unorganized, wild, free-flowing, novel ideas in a short period of time. This method helps people to think outside the usual constraints. This type of thinking encourages people to get comfortable with ideas that may not be immediately valuable, but could provide the key ingredient for driving innovation.</p>
+                                <p><b>Part 2:</b> Aim to spend about ⅙ of the allotted time on convergent thinking. This is a selective critique and combination of ideas in order to develop strong concepts. The convergent thinking method helps intelligently refine ideas by strengthening them and/or putting them together. The combination forces new thinking and creativity around how new solutions can be made and differentiated. Create clusters of complementary ideas and add more texture and detail by using affinity clustering.</p>
                             </div><!--//item-->
                         </div><!--//content-->
                     </div><!--//section-inner-->
@@ -121,29 +129,38 @@
 
                 <section class="experience section">
                     <div class="section-inner">
-                        <h2 class="heading">Challenge</h2>
+                        <h2 class="heading">Synthesize - 10'</h2>
                         <div class="content">
                             <div class="item">
-                                <p>Now that you have completed the get started activity and customized the available examples it's time for you to build your own VR experience.</p>
-                            </div><!--//item-->
-                            <div class="item">
-                                <h3 class="title">Build your University in VR<span class="place"></h3>
-                                <p>Combine what you just learned and build your University in Virtual Reality. A gray cube can be a building, a cylinder can be a tower building. Just use your imagination and combine all the A-Frame entities you just learned! You can build a part of your university (a classroom, the gym) or even the whole Campus! It's up to you and your imagination!</p>
-                                    <p><b>Bonus:</b> Can't find the component you need? Take your skills and your contributions to the open web to the next level by <a href="https://aframe.io/docs/master/core/component.html">building your own component</a>.</p>
-                           </div><!--//item-->
-
-                            <div class="item">
-                                <h3 class="title">Accept the challenge<span class="place"></h3>
+                                <p>Now that you have thought and processed some of the ideas, it's time for synthesizing your final proposal.</p>
+                                <p>Pick at least one of the strongest ideas and refine by imagining the scenario of usage and the social, emotional attributes your target user would experience or need to accomplish by using your browser Addon.</p>
+                                <p>Spend some time discussing how to answers the following questions:</p>
                                 <ol>
-                                  <a class="btn btn-cta-secondary fork" href="https://github.com/mozillacampusclubs/build-a-vr-world---challenge/fork" data-icon="octicon-repo-forked" data-style="mega" data-count-href="/mozillacampusclubs/build-a-vr-world---challenge/network" data-count-api="/repos/mozillacampusclubs/build-a-vr-world---challenge#forks_count" data-count-aria-label="# forks on GitHub" aria-label="Fork mozillacampusclubs/build-a-vr-world---challenge on GitHub">Fork</a>
-                                  <li>Fork the Challenge's repo and download the repo into your computer.</li>
-                                  <li>Create a new HTML file and name it after what you want to build. For example: AustriaUnibuilding.html.</li>
-                                  <li>After you complete building your University in VR commit your changes.</li>
-                                  <li>Open a pull request in our Repo.</li>
+                                  <li>What is the problem you want to solve?</li>
+                                  <li>Who is your audience?</li>
+                                  <li>What is the impact your Addon will bring into your audience's life?</li>
                                 </ol>
                             </div><!--//item-->
-                            <p>Congratulations! You just learned and created a open VR web experience in less than an hour! </p>
-                            <p>Are you ready for the next challenge on VR gaming? <span class="label label-theme">coming soon!</span></p>
+                            <p>Are you ready to submit you ideas?</p>
+                        </div><!--//content-->
+                    </div><!--//section-inner-->
+                </section><!--//section-->
+
+
+                <section class="experience section">
+                    <div class="section-inner">
+                        <h2 class="heading">Submit your idea - 5'</h2>
+                        <div class="content">
+                            <div class="item">
+                                <p>Congradulations! It's time for all student groups to share their ideas with the rest of the Open Source Clubs community and Mozilla's Addons team!</p>
+                                <p>Fellow students and the experts will be able to see your idea, ask questions and provide feedback or insights which will help you in your next step which is to build your Browser Addon.</p>
+                            </div><!--//item-->
+
+                            <div class="item">
+                              <!-- Place this tag where you want the button to render. -->
+                              <a class="btn btn-cta-secondary fork" href="https://github.com/mozillacampusclubs/teach-how-to-build-addons/issues/new">Submit your idea on GitHub</a>
+                            </div><!--//item-->
+                            <p>Are you ready to take the next step? Ask your Club Captain when it is goin to be the next meeting for building your Browser Addons.</p>
                         </div><!--//content-->
                     </div><!--//section-inner-->
                 </section><!--//section-->
@@ -152,13 +169,13 @@
 
               <aside class="testimonials aside section">
                   <div class="section-inner">
-                      <h2 class="heading">What you will build</h2>
+                      <h2 class="heading">What you will learn</h2>
                       <div class="content">
                           <div class="item">
                               <blockquote class="quote">
-                                  <p><i class="fa fa-quote-left"></i>WebVR is bringing an amazing technology right to your web browser and using A-Frame is surprisingly easy to build supercool Virtual Reality websites from scratch in just a few minutes - Not kidding.</p>
+                                  <p><i class="fa fa-quote-left"></i>By going through this activity you will learn everything around browser extensions. You will also learn how to work into groups for generatings and synthesize ideas which you will turn into WebExtensions Addons in the next meeting/activity</p>
                               </blockquote>
-                              <p class="source"><span class="name">Srushtika Neelakantam</span><br /><span class="title">Undergrad Computer Science Student & WebVR book author</span></p>
+                              <p class="source"><span class="name">Alexandros Dorodoulis</span><br /><span class="title">Undergrad Computer Science Student</span></p>
                           </div><!--//item-->
 
                       </div><!--//content-->
@@ -175,7 +192,7 @@
                                 <div class="item">
                                     <h3 class="level-title">HTML<span class="level-label" data-toggle="tooltip" data-placement="left" data-animation="true" >Expert</span></h3>
                                     <div class="level-bar">
-                                        <div class="level-bar-inner" data-level="40%">
+                                        <div class="level-bar-inner" data-level="10%">
                                         </div>
                                     </div><!--//level-bar-->
                                 </div><!--//item-->
@@ -199,13 +216,11 @@
                                 <div class="item">
                                     <h2 class="heading">Requirements & Resources</h2>
                                     <ul>
-                                    <li><a href="https://aframe.io/docs/0.4.0/introduction/getting-started.html" target="_blank">Intro to A-Frame</a></li>
-                                    <li><a href="https://aframe.io/docs/0.4.0/guides/" target="_blank">Building blocks with A-Frame</a></li>
-                                    <li><a href="https://docs.google.com/presentation/d/1qJwr_JwPtbcUx5E09eeJrpa2eXYN7ovmhsv4L27cjeo/present#slide=id.g2102afdc78_0_23">Facilitators slidedeck</a></li>
+                                    <li><a href="https://docs.google.com/presentation/d/1C0YbS15YO_JbH8dY_4nhPZWTtJOPe2Fx8GRyZjPCAgs/edit#slide=id.p">Facilitators slidedeck</a></li>
                                     <li>A projector</li>
-                                    <li>Laptops (1 per person)</li>
-                                    <li>Google Cardboard (optional)</li>
+                                    <li>Laptops (1 per group)</li>
                                     <li>Your favorite text editor</li>
+                                    <li>Access to the internet</li>
                                     </ul>
                                 </div><!--//item-->
                             </div>
