--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ browser toolbar.</p>
 
                             <div class="item featured text-center">
                                 <div class="featured-image">
-                                    <img class="img-responsive project-image" src="assets/images/vr.png" alt="project name" />
+                                    <img class="img-responsive project-image" src="assets/images/vr.jpg" alt="project name" />
                                     </a>
                                     <div class="ribbon">
                                         <div class="text">New</div>
