--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!--[if IE 9]> <html lang="en" class="ie9"> <![endif]-->
 <!--[if !IE]><!--> <html lang="en"> <!--<![endif]-->
 <head>
-    <title>Build your first Browser Addon</title>
+    <title>Build your first Browser Extension</title>
     <!-- Meta -->
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -45,7 +45,7 @@
         <div class="container">
             <img class="profile-image img-responsive pull-left" src="assets/images/profile.png" />
             <div class="profile-content pull-left">
-                <h1 class="name">Build your first Browser Addon</h1>
+                <h1 class="name">Build your first Browser Extension</h1>
                 <h2 class="desc">First meeting - Introduction to Browser Extensions</h2>
             </div><!--//profile-->
         </div><!--//container-->
@@ -58,14 +58,8 @@
                     <div class="section-inner">
                         <h2 class="heading">Introduction</h2>
                         <div class="content">
-                          <p>A browser extension is a plug-in that extends the functionality of a web
-browser. Some extensions are authored using web technologies such as HTML,
-JavaScript, and CSS. Others are developed using machine code and application
-programming interfaces (APIs) provided by web browsers, such as NPAPI and PPAPI.
-Browser extensions can change the user interface of the web browser without
-directly affecting viewable content of a web page; for example, by adding a
-browser toolbar.</p>
-                          <p>In this activity you will learn all about WebExtensions and Addon's and why to build an extension for your browser. This activity will also prepare you for your next meeting in which you will start diving more into <b>Building your First browser Addon</b>.</p> </div><!--//content-->
+                          <p>Add-ons provide a safe, simple, and powerful way to personalize your browsing experience. Now, it’s easier than ever to create add-ons for Firefox with WebExtensions APIs. This Web-based technology framework offers a powerful way to create browser extensions that can be easily ported to Chrome, Opera, and Edge, and you only need to know HTML, JavaScript and CSS to build them.</p>
+                          <p>In this activity you will learn about what makes browser extensions great and how to build a simple add-on using WebExtensions APIs.  This activity will also prepare you for your next meeting in which you will start diving more into <b>Building your First browser add-on</b>.</p> </div><!--//content-->
                     </div><!--//section-inner-->
                 </section><!--//section-->
 
@@ -103,21 +97,15 @@ browser toolbar.</p>
                         <h2 class="heading">Idea Generation - 35'</h2>
                         <div class="content">
                             <div class="item">
-                                <p class="summary">Now your Club is fired up and ready to go, we invite you to start brain storming on ideas for building your first Addon either as individuals or together as a group.</p>
-                                <p>Preferbly break into small groups (less than 4 people) and:</p>
+                                <p class="summary">Now your Club is fired up and ready to go, we invite you to start brain storming ideas for building your first add-on either as individuals or together as a group.</p>
+                                <p>Break into small groups (less than 4 people) and:</p>
                                 <ul>
                                   <li>Search <a href="addons.mozilla.org">addons.mozilla.org</a> and test extensions</li>
-                                  <li>What do you like/not like about them?</li>
+                                  <li>Discuss what do you like/not like about them?</li>
                                 </ul>
-                                <p>Now that you have a better idea of the avaliable Addons work as a group for answering the following question:</p>
+                                <p>Now that you have seen some extensions in action, work as a group for answering the following question:</p>
                                 <br>
-                                <h4><b>What would you like to solve for by building an Addon?</b></h4>
-                                <p>Additional questions:</p>
-                                <ol>
-                                  <li>What is the problem you want to solve?</li>
-                                  <li>Who is your audience?</li>
-                                  <li>What is the impact your Addon will bring into your audience's life?</li>
-                                </ol>
+                                <h4><b>What would you like to solve for by building an add-on?</b></h4>
                                 <br>
                                 <p>Useful tips on Idea generation from the <a href="https://toolkit.mozilla.org/method/idea-generation/">Open Innovation Toolkit:</a></p>
                                 <p><b>Part 1:</b> Aim to spend about ⅓ of the allotted time on divergent thinking. This is the rapid creation of random, unorganized, wild, free-flowing, novel ideas in a short period of time. This method helps people to think outside the usual constraints. This type of thinking encourages people to get comfortable with ideas that may not be immediately valuable, but could provide the key ingredient for driving innovation.</p>
@@ -132,13 +120,13 @@ browser toolbar.</p>
                         <h2 class="heading">Synthesize - 10'</h2>
                         <div class="content">
                             <div class="item">
-                                <p>Now that you have thought and processed some of the ideas, it's time for synthesizing your final proposal.</p>
-                                <p>Pick at least one of the strongest ideas and refine by imagining the scenario of usage and the social, emotional attributes your target user would experience or need to accomplish by using your browser Addon.</p>
+                                <p>Now that you have thought about and processed some of the ideas, it's time to synthesize your final proposal.</p>
+                                <p>Pick at least one of the strongest ideas and refine by imagining the scenario of usage and the social, emotional attributes your target user would experience or need to accomplish by using your browser add-on.</p>
                                 <p>Spend some time discussing how to answers the following questions:</p>
                                 <ol>
                                   <li>What is the problem you want to solve?</li>
                                   <li>Who is your audience?</li>
-                                  <li>What is the impact your Addon will bring into your audience's life?</li>
+                                  <li>What is the impact your add-on will have on your audience's experience of the web?</li>
                                 </ol>
                             </div><!--//item-->
                             <p>Are you ready to submit you ideas?</p>
@@ -152,15 +140,15 @@ browser toolbar.</p>
                         <h2 class="heading">Submit your idea - 5'</h2>
                         <div class="content">
                             <div class="item">
-                                <p>Congradulations! It's time for all student groups to share their ideas with the rest of the Open Source Clubs community and Mozilla's Addons team!</p>
-                                <p>Fellow students and the experts will be able to see your idea, ask questions and provide feedback or insights which will help you in your next step which is to build your Browser Addon.</p>
+                                <p>Congratulations! It's time for all student groups to share their ideas with the rest of the Open Source Clubs community and Mozilla's Add-ons team!</p>
+                                <p>Fellow students and the experts will be able to see your idea, ask questions and provide feedback or insights which will help you build your browser add-on.</p>
                             </div><!--//item-->
 
                             <div class="item">
                               <!-- Place this tag where you want the button to render. -->
                               <a class="btn btn-cta-secondary fork" href="https://github.com/mozillacampusclubs/teach-how-to-build-addons/issues/new">Submit your idea on GitHub</a>
                             </div><!--//item-->
-                            <p>Are you ready to take the next step? Ask your Club Captain when it is goin to be the next meeting for building your Browser Addons.</p>
+                            <p>Are you ready to take the next step and build your extension? Ask your Club Captain whenthe next meeting will be.</p>
                         </div><!--//content-->
                     </div><!--//section-inner-->
                 </section><!--//section-->
@@ -173,7 +161,7 @@ browser toolbar.</p>
                       <div class="content">
                           <div class="item">
                               <blockquote class="quote">
-                                  <p><i class="fa fa-quote-left"></i>By going through this activity you will learn everything around browser extensions. You will also learn how to work into groups for generatings and synthesize ideas which you will turn into WebExtensions Addons in the next meeting/activity</p>
+                                  <p><i class="fa fa-quote-left"></i>By going through this activity you will learn everything around browser extensions. You will also learn how to work into groups for generatings and synthesize ideas which you will turn into browser add-ons in the next meeting/activity</p>
                               </blockquote>
                               <p class="source"><span class="name">Alexandros Dorodoulis</span><br /><span class="title">Undergrad Computer Science Student</span></p>
                           </div><!--//item-->
