Update testimonial and requirments

--- a/paperprototype.html
+++ b/paperprototype.html
@@ -160,9 +160,9 @@
                       <div class="content">
                           <div class="item">
                               <blockquote class="quote">
-                                  <p><i class="fa fa-quote-left"></i>By going through this activity you will learn everything around browser extensions. You will also learn how to work into groups for generatings and synthesize ideas which you will turn into browser add-ons in the next meeting/activity</p>
+                                  <p><i class="fa fa-quote-left"></i>By going through this activity you will learn everything about paper prototyping your idea! This is an important and usefull technique for not only buildin a browser extension.</p>
                               </blockquote>
-                              <p class="source"><span class="name">Alexandros Dorodoulis</span><br /><span class="title">Undergrad Computer Science Student</span></p>
+                              <p class="source"><span class="name">Stegios Marias</span><br /><span class="title">Undergrad Computer Science Student</span></p>
                           </div><!--//item-->
 
                       </div><!--//content-->
@@ -203,11 +203,13 @@
                                 <div class="item">
                                     <h2 class="heading">Requirements & Resources</h2>
                                     <ul>
-                                    <li><a href="https://docs.google.com/presentation/d/1C0YbS15YO_JbH8dY_4nhPZWTtJOPe2Fx8GRyZjPCAgs/edit#slide=id.p">Facilitators slidedeck</a></li>
+                                    <li><a href="https://docs.google.com/presentation/d/1qySrYEOtLvs7Cuum1TuH7Mud-5M-Bqtli1lqSrJmA7s/edit#slide=id.p">Facilitators slidedeck</a></li>
                                     <li>A projector</li>
                                     <li>Laptops (1 per group)</li>
                                     <li>Your favorite text editor</li>
                                     <li>Access to the internet</li>
+                                    <li>Paper, cardboard, foam, glue, scissors, markers, bluetack</p>
+                                    <li>For testing use programs such as keynote, <a href="https://www.invisionapp.com/" target="_blank">invisio</a> or <a href="https://popapp.in/" target="_blank">pop app</a></li>
                                     </ul>
                                 </div><!--//item-->
                             </div>
