--- a/paperprototype.html
+++ b/paperprototype.html
@@ -58,8 +58,9 @@
                     <div class="section-inner">
                         <h2 class="heading">Introduction</h2>
                         <div class="content">
-                          <p>Add-ons provide a safe, simple, and powerful way to personalize your browsing experience. Now, it’s easier than ever to create add-ons for Firefox with WebExtensions APIs. This Web-based technology framework offers a powerful way to create browser extensions that can be easily ported to Chrome, Opera, and Edge, and you only need to know HTML, JavaScript and CSS to build them.</p>
-                          <p>In this activity you will learn about what makes browser extensions great and how to build a simple add-on using WebExtensions APIs.  This activity will also prepare you for your next meeting in which you will start diving more into <b>Building your First browser add-on</b>.</p> </div><!--//content-->
+                          <p>This is the second activity for building a browser extension. Do you want to start from the beggining? <a href="https://mozillacampusclubs.github.io/teach-how-to-build-addons/">Check out the first activity</a> which will introduce you to browser extensions and idea generation.</p>
+                          <p>In this meeting/activity participants will learn all about paper prototyping, a technique for communicating and sharing an idea early on by making it real and testing it early with your users.</p>
+                        </div><!--//content-->
                     </div><!--//section-inner-->
                 </section><!--//section-->
 
