Add oi toolkit reference

--- a/paperprototype.html
+++ b/paperprototype.html
@@ -60,6 +60,7 @@
                         <div class="content">
                           <p>This is the second activity for building a browser extension. Do you want to start from the beggining? <a href="https://mozillacampusclubs.github.io/teach-how-to-build-addons/">Check out the first activity</a> which will introduce you to browser extensions and idea generation.</p>
                           <p>In this meeting/activity participants will learn all about paper prototyping, a technique for communicating and sharing an idea early on by making it real and testing it early with your users.</p>
+                          <p>This activity is inspired by the <a href="https://toolkit.mozilla.org/method/paper-prototype/">Paper prototype guide on Mozilla's Open Innovation Toolkit</a>.
                         </div><!--//content-->
                     </div><!--//section-inner-->
                 </section><!--//section-->
