--- a/paperprototype.html
+++ b/paperprototype.html
@@ -72,7 +72,7 @@
 
                             <div class="item featured text-center">
                                 <div class="featured-image">
-                                    <img class="img-responsive project-image" src="assets/images/vr.jpg" alt="project name" />
+                                    <img class="img-responsive project-image" src="assets/images/paperprototype.png" alt="project name" />
                                     </a>
                                 <div class="desc text-left">
 
