--- a/paperprototype.html
+++ b/paperprototype.html
@@ -162,7 +162,7 @@
                       <div class="content">
                           <div class="item">
                               <blockquote class="quote">
-                                  <p><i class="fa fa-quote-left"></i>By going through this activity you will learn everything about paper prototyping your idea! This is an important and usefull technique for not only buildin a browser extension.</p>
+                                  <p><i class="fa fa-quote-left"></i>By going through this activity you will learn everything about paper prototyping your idea! This is an important and usefull technique for not only building a browser extension.</p>
                               </blockquote>
                               <p class="source"><span class="name">Stegios Marias</span><br /><span class="title">Undergrad Computer Science Student</span></p>
                           </div><!--//item-->
